# physics_engine

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust.yml
res/: cube.mtl  sphere.mtl
src/: camera.rs  lib.rs  main.rs  model.rs  objects.rs  resources.rs  shader.wgsl  shader2.wgsl  texture.rs
src/physics/: colisions.rs  collisions.rs  mod.rs
src/shaders/: color_shader.wgsl  shader.wgsl
